--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "나만의 단어 해설집",
-  "short_name": "단어장",
+  "short_name": "나만의 단어장",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f3f4f6",
@@ -17,4 +17,5 @@
       "type": "image/png"
     }
   ]
+
 }
